# python_template

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  compose.yml  pyproject.toml  tox.ini
.github/workflows/: test_docker.yml  test_poetry.yml
docker/cpu/: Dockerfile  pyproject.toml  requirements.txt
scripts/: main.py
src/project/: env.py  main.py
src/project/common/: regex.py
src/project/common/utils/: async_utils.py  cli_utils.py  import_utils.py  regex_utils.py
src/project/common/utils/file/: base.py  config.py  factory.py  io.py  json.py  jsonlines.py  toml.py  xml.py  yaml.py
src/python_template/: env.py
tests/project/: test_env.py
tests/project/common/utils/: test_async_utils.py  test_cli_utils.py  test_import_utils.py  test_regex_utils.py
tests/project/common/utils/file/: test_config.py  test_factory.py  test_io.py  test_json.py  test_toml.py  test_xml.py  test_yaml.py
