[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "setuptools>=69.0.3",
    "fire>=0.5.0",
    "pydantic>=2.5.3",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.16.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "matplotlib>=3.9.0",
    "pandas>=1.4.2",
    "seaborn>=0.11.2",
    "japanize-matplotlib>=1.1.3",
    "numpy>=2.2.0",
    "jupyterlab>=3.3.4",
    "tqdm>=4.64.0",
    "scikit-learn>=1.6.0",
    "openpyxl>=3.1.2",
    "polars>=0.20.31",
    "aiohttp>=3.9.5",
    "tenacity>=8.4.1",
    "playwright>=1.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project", "src"]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=3.3.4",
    "marimo>=0.13.3",
    "mypy>=1.11.2",
    "nbstripout>=0.7.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "tox>=4.21.2",
]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "data", "dist", "misc", "notebooks", "prof", "tmp", "workspacea", ".tox"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select  = [
    "I", # isort
]
# ignores
ignore = ["E501"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.pyupgrade]
# Python3.8互換のための設定
keep-runtime-typing = true

[tool.mypy]
python_version="3.12"
files = "src"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
