[project]
name = "project"
version = "0.1.0"
description = ""
authors = [{ name = "Tatsuki Okada", email = "tatsukio0522@gmali.com" }]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "setuptools>=80.9.0",
    "fire>=0.7.1",
    "pydantic>=2.12.4",
    "beautifulsoup4>=4.14.0",
    "selenium>=4.38.0",
    "playwright>=1.56.0",
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "polars>=1.35.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "japanize-matplotlib>=1.1.3",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "aiohttp>=3.9.5",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project", "src"]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "data", "dist", "misc", "notebooks", "prof", "tmp", "workspacea", ".tox"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select  = [
    "I", # isort
]
# ignores
ignore = ["E501"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.pyupgrade]
# Python3.8互換のための設定
keep-runtime-typing = true

[tool.mypy]
python_version="3.12"
files = "src"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.1.0",
    "marimo>=0.17.0",
    "tox>=4.30.0",
    "pytest>=9.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
    "mypy>=1.18.0",
    "ty>=0.0.1a26",
    "nbstripout>=0.8.0",
    "pre-commit>=4.3.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-toml>=0.10.8.20240310",
]
