[project]
name = "project"
version = "0.1.0"
description = ""
authors = [{ name = "Tatsuki Okada", email = "tatsukio0522@gmali.com" }]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "setuptools>=80.9.0",
    "fire>=0.7.1",
    "pydantic>=2.12.4",
    "beautifulsoup4>=4.14.0",
    "selenium>=4.38.0",
    "playwright>=1.56.0",
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "polars>=1.35.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "japanize-matplotlib>=1.1.3",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "aiohttp>=3.9.5",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project", "src"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py313"
line-length = 119
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "G004",
    "Q000",
    "Q003",
    "EM101",
    "EM102",
    "COM812",
    "FBT001",
    "FBT002",
    "TRY003",
    "INP001",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "PLR2004",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version="3.13"
files = "src"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = false
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.1.0",
    "marimo>=0.17.0",
    "tox>=4.30.0",
    "pytest>=9.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
    "mypy>=1.18.0",
    "ty>=0.0.1a26",
    "nbstripout>=0.8.0",
    "pre-commit>=4.3.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-toml>=0.10.8.20240310",
    "types-requests>=2.32.0.20241016",
]
